--- a/langs/strings/id.yml
+++ b/langs/strings/id.yml
@@ -2,13 +2,11 @@ name: Indonesia
 natively: Indonesia
 
 authors:
-  - Keenan
-  - Lucifer
-  - Lumiere
+
 
 
 cmds: "**Bantuan Perintah**"
-err: "{} **Error:** {} \n\n**Silahkan laporkan ke @KynanSupport**"
+err: "{} **Error:** {} \n\n**Silahkan laporkan ke @JooxSupport**"
 err_1: "**Error:** {}"
 proses: "{} **Sedang Diproses...**"
 proses_1: "**Sedang Diproses...**"
@@ -223,7 +221,7 @@ alv_4: "Support"
 
 # global
 glbl_2: "{} **Pengguna tidak ditemukan.**"
-glbl_3: "{} **Dia adalah Developer Mix-Userbot.**"
+glbl_3: "{} **Dia adalah Developer Argus-Userbot.**"
 glbl_4: "{} **Silahkan berikan alasan untuk diGban!**"
 glbl_5: "{} **Pengguna sudah digban.**"
 glbl_6: "{} **Warning Global Banned\n\n{} Berhasil: `{}` Chat\n{} Gagal: `{}` Chat\n{} User: `{}`**\n{} Alasan: `{}`**"
@@ -275,10 +273,10 @@ hero_10: "{} **Hanya untuk pengguna Heroku.**"
 hero_11: "{} **DYNO USAGE\n\n{} <u>Usage:</u>\nTotal Used:\n`{}h` `{}m` [`{}%`]\n\n{} <u>Remaining Quota:</u>\nTotal Left: `{}h` `{}m` [`{}%`]"
 hero_12: "{} **Kesalahan Perintah Git.**"
 hero_13: "{} **Repositori Git Tidak Valid.**"
-hero_14: "**Mix-Userbot sudah versi paling terbaru.**"
-hero_15: "**Pembaruan baru tersedia untuk Mix-Userbot !\n\n➣ Mendorong Pembaruan Sekarang\n\nPembaruan:**\n\n"
-hero_16: "**Pembaruan baru tersedia untuk Mix-Userbot!\n\n➣ Mendorong Pembaruan Sekarang\n\nPembaruan:\n\n[Klik Di Sini untuk memeriksa Pembaruan]({})**"
-hero_17: "{} {}\n\n**Mix-Userbot berhasil diperbarui! Sekarang, tunggu 2 - 3 menit hingga bot dimulai ulang!**"
+hero_14: "**Argus-Userbot sudah versi paling terbaru.**"
+hero_15: "**Pembaruan baru tersedia untuk Argus-Userbot !\n\n➣ Mendorong Pembaruan Sekarang\n\nPembaruan:**\n\n"
+hero_16: "**Pembaruan baru tersedia untuk Argus-Userbot!\n\n➣ Mendorong Pembaruan Sekarang\n\nPembaruan:\n\n[Klik Di Sini untuk memeriksa Pembaruan]({})**"
+hero_17: "{} {}\n\n**Argus-Userbot berhasil diperbarui! Sekarang, tunggu 2 - 3 menit hingga bot dimulai ulang!**"
 
 # info
 info_1: "{} **Saya tidak berada digrup itu!**"
@@ -327,7 +325,7 @@ lck_24: "{} **Pesan terusan channel dibuka digrup ini!**"
 lck_25: "{} **Invalid Unlock Tipe!**\n\n{} **Silahkan ketik `locktypes` untuk melihat format lock!**"
 lck_27: "{} Dibuka **{}** dalam grup ini.**"
 lck_28: "{} **Terjadi kesalahan!**"
-lck_29: "{} **Lapor ke @kynansupport :\n\n`{}`**"
+lck_29: "{} **Lapor ke @JooxSupport :\n\n`{}`**"
 
 # logo
 logo_1: "{} **Gunakan format : `{}` [text]**"
@@ -355,7 +353,7 @@ paste_3: "{} **Berhasil! [Tautan Disini]({})**"
 ping_1: "**{} Pong `{}ms`**\n**{} Uptime !! `{}`**"
 
 # markdown
-mark_1: "<b>Markdown Formatting</b>\n<b>Anda dapat memformat pesan Anda menggunakan <b>tebal</b>, <i>miring</i>, <u>garis bawah</u>, <strike>coret</strike>, dan banyak lagi.</b>\n\n<code>`kata kode`</code>: Tanda kutip terbalik digunakan Buat font monospace. Ditampilkan sebagai: <code>kata kode</code>.\n\n<code>__miring__</code>: Garis bawah digunakan Buat font miring. Ditampilkan sebagai: <i>kata miring</i>.\n\n<code>**tebal**</code>: Asterisk digunakan Buat font tebal. Ditampilkan sebagai: <b>kata tebal</b>.\n\n<code>--garis bawah--</code>: Buat membuat teks <u>garis bawah</u>.\n\n<code>~~coret~~</code>: Tilda digunakan Buat strikethrough. Ditampilkan sebagai: <strike>coret</strike>.\n\n<code>||spoiler||</code>: Garis vertikal ganda digunakan Buat spoiler. Ditampilkan sebagai: <spoiler>Spoiler</spoiler>.\n\n<code>[hyperlink](contoh)</code>: Ini adalah pemformatan yang digunakan Buat hyperlink.\n\n<code>Hallo Disini ~ [Tombol Saya|https://link.com]</code>: Ini adalah pemformatan yang digunakan Buat membuat tombol.\n\nAnda juga bisa membuat tombol callback_data dengan diawal tanda <code>#</code> . Untuk lebih lanjut silahkan ke @KynanSupport untuk meminta bantuan."
+mark_1: "<b>Markdown Formatting</b>\n<b>Anda dapat memformat pesan Anda menggunakan <b>tebal</b>, <i>miring</i>, <u>garis bawah</u>, <strike>coret</strike>, dan banyak lagi.</b>\n\n<code>`kata kode`</code>: Tanda kutip terbalik digunakan Buat font monospace. Ditampilkan sebagai: <code>kata kode</code>.\n\n<code>__miring__</code>: Garis bawah digunakan Buat font miring. Ditampilkan sebagai: <i>kata miring</i>.\n\n<code>**tebal**</code>: Asterisk digunakan Buat font tebal. Ditampilkan sebagai: <b>kata tebal</b>.\n\n<code>--garis bawah--</code>: Buat membuat teks <u>garis bawah</u>.\n\n<code>~~coret~~</code>: Tilda digunakan Buat strikethrough. Ditampilkan sebagai: <strike>coret</strike>.\n\n<code>||spoiler||</code>: Garis vertikal ganda digunakan Buat spoiler. Ditampilkan sebagai: <spoiler>Spoiler</spoiler>.\n\n<code>[hyperlink](contoh)</code>: Ini adalah pemformatan yang digunakan Buat hyperlink.\n\n<code>Hallo Disini ~ [Tombol Saya|https://link.com]</code>: Ini adalah pemformatan yang digunakan Buat membuat tombol.\n\nAnda juga bisa membuat tombol callback_data dengan diawal tanda <code>#</code> . Untuk lebih lanjut silahkan ke @JooxSupport untuk meminta bantuan."
 mark_2: "<b>Fillings</b>\n\nAnda juga dapat menyesuaikan isi pesan Anda dengan data kontekstual. Misalnya, Anda bisa menyebut nama pengguna dalam pesan selamat datang, atau menyebutnya dalam filter!\n\n<b>Isian yang didukung:</b>\n\n<code>{first}</code>: Nama depan pengguna.\n<code>{last}</code>: Nama belakang pengguna.\n<code>{fullname}</code>: Nama lengkap pengguna.\n<code>{username}</code>: Nama pengguna pengguna. Jika mereka tidak memiliki satu, akan menyebutkan pengguna tersebut.\n<code>{mention}</code>: Menyebutkan pengguna dengan nama depan mereka.\n<code>{id}</code>: ID pengguna.\n<code>{chatname}</code>: Nama obrolan."
 mark_3: "**Untuk melihat format markdown silahkan klik tombol dibawah.**"
 
