--- a/langs/strings/toxic.yml
+++ b/langs/strings/toxic.yml
@@ -2,13 +2,11 @@ name: Toxic
 natively: Toxic
 
 authors:
-  - Keenan 
-  - Lucifer
-  - Lumiere
+  
 
 
 cmds: "**Bantuan Perintah**"
-err: "{} **Error:** {} \n\n**Ngadu kesini jing @KynanSupport**"
+err: "{} **Error:** {} \n\n**Ngadu kesini jing @JooxSupport**"
 err_1: "**Error:** {}"
 proses: "{} **Sabar ya jing...**"
 proses_1: "**Sedang Diproses...**"
@@ -86,7 +84,7 @@ inv_1: "{} <b>sabar ya kntl lgi nambahin orangnya ...</b>"
 inv_2: "{} <b>Kasih ID/Usernamenya lah goblok!</b>"
 inv_3: "{} <b>dah tuh udah gw tambahin si :</b> <b>{}</b>\n <b>Ke : <code>{}</code> minimal makasih kntl.</b>"
 inv_4: "{} <b>Nih Link Invitenya tot:</b> {}"
-inv_5: "{} <b>LU SIAPA KNTL, KAGA PUNYA IJIN MAIN MINTA MINTA BAE</b>"
+inv_5: "{} <b>LU SIAPA KNTL, KAGA PUNYA IJIN MAIN MINTA MINTA AJE</b>"
 inv_6: "{} Fitur ini cuma buat group/channel tolol mikir lah udah gede masih kaga punya otak!!."
 
 # join
@@ -96,7 +94,7 @@ join_3: "{} <b> {} Sukses keluar dari <code>{}</code>"
 join_4: "{} <b>Bye!</b>"
 join_5: "{} <b>Sukses keluar dari `{}` Grup ampas,\n{} Gagal Keluar dari `{}` Grup ampas</b>"
 join_6: "{} <b>Berhasil keluar dari `{}` Channel ampas\n{} Gagal keluar dari `{}` Channel ampas.</b>"
-join_7: "{} <b>Yang bener bae! masa lo mau ot dari sini? Lo kan `Admin` atau `Owner` di `{}`</b>"
+join_7: "{} <b>Yang bener aje! masa lo mau ot dari sini? Lo kan `Admin` atau `Owner` di `{}`</b>"
 
 # uprefixies
 upref_2: "{} **Prefix diganti jing ke : `{}`**"
@@ -104,15 +102,15 @@ upref_1: "{} **Goblok!! Pake format : `{}` [query]**"
 
 # vcs
 vc_1: "{} **Goblok apa buta ? Ga ada os tolol!!\n`{}`**"
-vc_2: "{} **Oke jing!! Obrolan suara udah aktif.**"
-vc_3: "{} **Oke jing!! Obrolan suara nya dibanting.**"
+vc_2: "{} **Oke sat!! Obrolan suara udah aktif.**"
+vc_3: "{} **Oke sat!! Obrolan suara nya dibanting.**"
 vc_4: "{} **Goblok!! Pake format : `{}` [judul obrolan suara].**"
 vc_5: "{} **Goblok!! lo bukan admin jing!!**"
-vc_6: "{} **Oke jing!! Judul obrolan suara diganti :\n`{}`.**"
-vc_7: "{} **Anjay Si Anjing Norak\nNaikin bot ke obrolan suara:\n`{}`.**"
-vc_8: "{} **Mata lu kemana si bangsat!!Akun lu diatas Bego!!**"
-vc_9: "{} **Anjay si Anjing Norak\nNurunin bot dari obrolan suara:\n`{}`.**"
-vc_10: "{} **Mata lu kemana si bangsat!!Ga ada obrolan suara Goblok!!!**"
+vc_6: "{} **Oke sat!! Judul obrolan suara diganti :\n`{}`.**"
+vc_7: "{} **Bot lu Udah Naik Tuh\nNaikin bot ke obrolan suara:\n`{}`.**"
+vc_8: "{} **Mata lu kemana siih!!Akun lu diatas Bego!!**"
+vc_9: "{} **Bot lu Udah Turun Tuh\nNurunin bot dari obrolan suara:\n`{}`.**"
+vc_10: "{} **Mata lu kemana siih!!Ga ada obrolan suara Goblok!!!**"
 
 # webshot
 webs_1: "{} **Goblok!! Pake format: `{}` [link].**"
@@ -143,11 +141,11 @@ butt_1: "{} **Sigoblok ga bener!! ketik `help markdown` terus baca!!**"
 
 # afk
 afk_1: "{} **Ga bisa pake Akun Anonim atau Akun Channel Tolol!!**"
-afk_2: "{} **Anjay Jamet Mana Afk!!**"
+afk_2: "{} **Anjay Sok Afk Lu!!**"
 afk_3: "**{} Gw balik!\n{} Durasi AFK! : `{}` yang lalu.**"
 afk_4: "**{} Gw balik!\n{} Durasi AFK! : `{}` yang lalu.**\n{}**Gara-gara : `{}`.**"
-afk_5: "**{} Gw AFK Tolol!!**\n{} **Dari :** `{}` yang lalu."
-afk_6: "**{} Gw AFK Tolol!!**\n{} **Dari :** `{}` yang lalu.\n{} **Gara-gara:** `{}`."
+afk_5: "**{} Gw AFK Dulu!!**\n{} **Dari :** `{}` yang lalu."
+afk_6: "**{} Gw AFK Dulu!!**\n{} **Dari :** `{}` yang lalu.\n{} **Gara-gara:** `{}`."
 
 # carbon
 crbn_1: "{} **Kasih teks lah minimal jing!!**"
@@ -204,7 +202,7 @@ gcs_1: "{} **Eh Tolol!! Minimal mah kasih teks.**"
 gcs_2: "{} **Hasil Pesan Gcast :\n{} Masuk di `{}` Grup.\n{} Ketangkis di `{}` Grup.**"
 gcs_3: "{} **Hasil Pesan Gcast :\n{} Masuk di `{}` Pengguna.\n{} Ketangkis di `{}` Pengguna.**"
 gcs_4: "{} **Ini grup udah ada ya bangsat!!**"
-gcs_5: "{} **`{}` | `{}` Masuk jing ke blacklist.**"
+gcs_5: "{} **`{}` | `{}` Masuk nyet ke blacklist.**"
 gcs_6: "{} **Grup `{}` udah ada Bego!!**"
 gcs_7: "{} **`{}` | `{}` Ga ada Goblok!!**"
 gcs_8: "{} **Grup `{}` dikeluarin dari blacklist!!**"
@@ -218,19 +216,19 @@ gcs_14: "{} **Done jing, semua grup-grup bajingan ilang dari blacklist!!**"
 # alive 
 alv_1: "**Author**"
 alv_2: "**Connoisseur**"
-alv_3: "**Mix-Userbot**\n    **status:** {}\n      **dc_id:** {}\n      **ping_dc:** {} ms\n      **antipm:** {}\n      **pengguna:** {}\n      **bot**: {}\n      **grup:** {}\n      **durasi_bot:** {}"
+alv_3: "**Argus-Userbot**\n    **status:** {}\n      **dc_id:** {}\n      **ping_dc:** {} ms\n      **antipm:** {}\n      **pengguna:** {}\n      **bot**: {}\n      **grup:** {}\n      **durasi_bot:** {}"
 alv_4: "Support"
 
 # global
 glbl_2: "{} **Manusia model gini ga ada jing!!**"
 glbl_3: "{} **Minimal tau diri lah Bangsat!! Lo siapa receh??**"
 glbl_4: "{} **Eh Tolol!! Kalo mo Gban minimal mah kasih alasan!!**"
-glbl_5: "{} **Yah buset dah, ini Manuksia kan udah di Gban!!**"
+glbl_5: "{} **Yah buset dah, ini Manusia kan udah di Gban!!**"
 glbl_6: "{} **Minggir Jing!!\n\n{} Ke Gban: `{}` Grup\n{} Gagal Woy: `{}` Grup\n{} Anak Dajjal: `{}`\n{} Gara-gara: `{}`**"
 glbl_7: "{} **Dongok!! Ini setan belom pernah lo Gban kocak!!**"
 glbl_8: "{} **Minggir Jablay!!\n\n{} Dilepas: `{}` Grup\n{} Kaga dilepas: `{}` Grup\n{} Anak Dajjal: `{}`**"
 glbl_9: "{} **Eh Tolol!! Kalo mo Gmute minimal mah kasih alasan!!**"
-glbl_10: "{} **Yah buset dah, ini Manuksia kan udah di Gmute Mmg!!**"
+glbl_10: "{} **Yah buset dah, ini Manusia kan udah di Gmute Mmg!!**"
 glbl_11: "{} **Minggir Beban!!\n\n{} Kena Gmute: `{}` Grup\n{} Kaga Kena: `{}` Grup\n{} Anak Haram: `{}`\n{} Gara-gara: `{}`**"
 glbl_12: "{} **Dongok!! Ini setan belom pernah lo Gmute kocak!!**"
 glbl_13: "{} **Minggir Bangsat!!\n\n{} Ke Lepas: `{}` Grup\n{} Kaga Lepas: `{}` Grup\n{} Anak Haram: `{}`**"
@@ -242,7 +240,7 @@ glbl_18: "{} **Daftar Anak Haram:**\n\n"
 glbl_19: "{} **`{}`**\n"
 glbl_20: "{} **Gara-gara: `{}`\n\n{} Total :`{}`**\n"
 glbl_21: "{} **Daftar Anak Haram!!**\n\n"
-glbl_22: "**Tai tai!! Masih kosong jing. Cari Anak Dajjal Atau Anak Haram Buat Dikasih Faham.**"
+glbl_22: "**Tai tai!! Masih kosong jing. Cari Anak Dajjal Atau Anak Haram Buat Dikasih Paham Dah.**"
 
 # graph
 grp_1: "{} **Goblok!! Bales ke teks atau media lah!!**"
@@ -282,7 +280,7 @@ hero_17: "{} {}\n\n**Done Coegggg!! Tunggu 1-2 menit kalo ora idup ya Mokad Bot 
 
 # info
 info_1: "{} **Lah gw ga disitu Tololl!!**"
-info_2: "**Ora kenal**"
+info_2: "**Kaga kenal**"
 info_3: "**Dep**"
 info_4: "**Pemilik**"
 info_5: "**Dep & Owner**"
@@ -327,7 +325,7 @@ lck_24: "{} **Yosh gw buka!!**"
 lck_25: "{} **Salah tipe Goblok!!**\n\n{} **Ketik `locktypes` buat liat format!!**"
 lck_27: "{} Yosh gw buka **{}**.**"
 lck_28: "{} **Anjing Error Coeg!!**"
-lck_29: "{} **Lapor ke @kynansupport :\n\n`{}`**"
+lck_29: "{} **Lapor ke @JooxSupport :\n\n`{}`**"
 
 # logo
 logo_1: "{} **Goblok!! Pake format : `{}` [text]**"
@@ -337,7 +335,7 @@ logo_2: "{} **Dimasak, dikukus, digoreng sama : {}**"
 nts_1: "{} **Goblok!! Pake format : `{}` [nama catatan] [balas ke pesan].**"
 nts_2: "{} **Minimal kasih teks lah Dongok!!**"
 nts_3: "{} **Utang `{}` disimpan.**"
-nts_4: "{} **Kasih nama catatan Badjinga!!**"
+nts_4: "{} **Kasih nama catatan Badjingan!!**"
 nts_5: "{} **Utang `{}` kaga ada!!**"
 nts_6: "{} **Kaga ada utang coeg!!**"
 nts_7: "{} **Daftar Kasbon :**\n\n"
@@ -355,12 +353,12 @@ paste_3: "{} **Yosh!! [Tautan Disini]({})**"
 ping_1: "**{} Pong `{}ms`**\n**{} Uptime !! `{}`**"
 
 # markdown
-mark_1: "<b>Markdown Formatting</b>\n<b>Anda dapat memformat pesan Anda menggunakan <b>tebal</b>, <i>miring</i>, <u>garis bawah</u>, <strike>coret</strike>, dan banyak lagi.</b>\n\n<code>`kata kode`</code>: Tanda kutip terbalik digunakan Buat font monospace. Ditampilkan sebagai: <code>kata kode</code>.\n\n<code>__miring__</code>: Garis bawah digunakan Buat font miring. Ditampilkan sebagai: <i>kata miring</i>.\n\n<code>**tebal**</code>: Asterisk digunakan Buat font tebal. Ditampilkan sebagai: <b>kata tebal</b>.\n\n<code>--garis bawah--</code>: Buat membuat teks <u>garis bawah</u>.\n\n<code>~~coret~~</code>: Tilda digunakan Buat strikethrough. Ditampilkan sebagai: <strike>coret</strike>.\n\n<code>||spoiler||</code>: Garis vertikal ganda digunakan Buat spoiler. Ditampilkan sebagai: <spoiler>Spoiler</spoiler>.\n\n<code>[hyperlink](contoh)</code>: Ini adalah pemformatan yang digunakan Buat hyperlink.\n\n<code>Hallo Disini ~ [Tombol Saya|https://link.com]</code>: Ini adalah pemformatan yang digunakan Buat membuat tombol.\n\nAnda juga bisa membuat tombol callback_data dengan diawal tanda <code>#</code> . Untuk lebih lanjut silahkan ke @KynanSupport untuk meminta bantuan."
+mark_1: "<b>Markdown Formatting</b>\n<b>Anda dapat memformat pesan Anda menggunakan <b>tebal</b>, <i>miring</i>, <u>garis bawah</u>, <strike>coret</strike>, dan banyak lagi.</b>\n\n<code>`kata kode`</code>: Tanda kutip terbalik digunakan Buat font monospace. Ditampilkan sebagai: <code>kata kode</code>.\n\n<code>__miring__</code>: Garis bawah digunakan Buat font miring. Ditampilkan sebagai: <i>kata miring</i>.\n\n<code>**tebal**</code>: Asterisk digunakan Buat font tebal. Ditampilkan sebagai: <b>kata tebal</b>.\n\n<code>--garis bawah--</code>: Buat membuat teks <u>garis bawah</u>.\n\n<code>~~coret~~</code>: Tilda digunakan Buat strikethrough. Ditampilkan sebagai: <strike>coret</strike>.\n\n<code>||spoiler||</code>: Garis vertikal ganda digunakan Buat spoiler. Ditampilkan sebagai: <spoiler>Spoiler</spoiler>.\n\n<code>[hyperlink](contoh)</code>: Ini adalah pemformatan yang digunakan Buat hyperlink.\n\n<code>Hallo Disini ~ [Tombol Saya|https://link.com]</code>: Ini adalah pemformatan yang digunakan Buat membuat tombol.\n\nAnda juga bisa membuat tombol callback_data dengan diawal tanda <code>#</code> . Untuk lebih lanjut silahkan ke @JooxSupport untuk meminta bantuan."
 mark_2: "<b>Fillings</b>\n\nAnda juga dapat menyesuaikan isi pesan Anda dengan data kontekstual. Misalnya, Anda bisa menyebut nama pengguna dalam pesan selamat datang, atau menyebutnya dalam filter!\n\n<b>Isian yang didukung:</b>\n\n<code>{first}</code>: Nama depan pengguna.\n<code>{last}</code>: Nama belakang pengguna.\n<code>{fullname}</code>: Nama lengkap pengguna.\n<code>{username}</code>: Nama pengguna pengguna. Jika mereka tidak memiliki satu, akan menyebutkan pengguna tersebut.\n<code>{mention}</code>: Menyebutkan pengguna dengan nama depan mereka.\n<code>{id}</code>: ID pengguna.\n<code>{chatname}</code>: Nama obrolan."
 mark_3: "**Buat melihat format markdown silahkan klik tombol dibawah.**"
 
 # pmpermit
-pmper_1: "Jangan Spam {mention} 👋. Diblokir Mampus Loe!!"
+pmper_1: "Jangan Spam {mention} 👋. Diblokir Mampus Lo!!"
 pmper_2: "{}\n\nLoe punya kartu merah `{}/{}` !!"
 pmper_3: "{} **Ini Manusia Udah Gw Acc Anj!!**"
 pmper_4: "{} **Okeh coeg, Gw Acc Ini Makhluk!!**"
@@ -374,7 +372,7 @@ pmper_10: "{} **Ehh Buta, Budeg, Congean!! Gw Dah Bilang `{}` Kali\nTungguin Bos
 # quote
 qot_1: "{} **Daftar Warna :\n\n**"
 qot_2: "{} **Dibaca ya dengan teliti Ya Setan!?**"
-qot_3: "{} **Yah Si Kontol!! Mo ilang Akun Beban Loe??**"
+qot_3: "{} **Yah Si Kontol!! Mo ilang Akun Beban Lo??**"
 qot_4: "{} **Batas pesannya 10 Anj!!**"
 
 # restrict
@@ -383,23 +381,23 @@ res_2: "{} **Mampus Gw Depak: {}\n{} Pelaku: {}\n{} Gara-gara: `{}`**"
 res_3: "{} **Dia Owner GC Goblok!! Ada Juga Akun Lu Yg Didepak!!**"
 res_4: "{} **Kalo Bego, Dongo, Tolol Gausah Ngajak, Setan!!**"
 res_5: "{} **Mampus Gw Kubur: {}\n{} Pelaku: {}\n{} Gara-gara: `{}`**"
-res_6: "{} **Gw gali kubur si {}**"
+res_6: "{} **Gw gali kuburan si {}**"
 res_7: "{} **Bales ke pesan dong, Setan!!**"
 res_8: "{} **Gw lepas [BH]({})!**"
 res_9: "{} **Gw pasang [Togel]({})!**"
 res_10: "{} **Kalo Bego, Dongo, Tolol Gausah Ngajak, Setan!!**"
-res_11: "{} **Gw Sumpel Congor Loe: {}\n{} Pelaku: {}\n{} Gara-gara: {}**"
-res_12: "{} **Minimal sadar diri ngentot!! Loe admin baru!!**"
+res_11: "{} **Gw Sumpel Congor Lo!: {}\n{} Pelaku: {}\n{} Gara-gara: {}**"
+res_12: "{} **Minimal sadar diri ngentot!! Lo admin baru!!**"
 res_13: "{} **Anjing!! Gw gak punya izin!!**"
 res_14: "{} **Tuh gw buka {}!! Laen kali bacot yang bener!!**"
-res_15: "{} **Yosh Gw Musnahkan Manusia-manusia Depresi`{}`.**"
+res_15: "{} **Yosh Gw Musnahkan Manusia-manusia Depresi Gini`{}`.**"
 res_16: "{} **Ahhh sial kaga ada Manusia Depresi!!**"
 res_17: "{} **Link Bokep :**\n\n{}"
-res_18: "{} **Siapa yg loe mo adu domba anj?**"
+res_18: "{} **Siapa yg lo mo adu domba anj?**"
 res_19: "{} **Lah Bujug Buset Ikan Gapi!!**"
-res_20: "{} **Gw Gedig Lo lama-lama!! Lah dia mah admin kan, Bego!!**"
+res_20: "{} **Gw Gedig Lo lama-lama!! Lah dia mah admin kan, Bego Dah!!**"
 res_21: "{} **Mampus gw adu domba {} ama admin!!**"
-res_22: "{} **Loe Tolol apa Bego? Loe admin, Bangsat!!**"
+res_22: "{} **Loe Tolol apa Bego? Lo admin, Bangsat!!**"
 res_23: "{} **{}\n{} Manusia ini {} udah jadi tangan kanan!!**"
 res_24: "{} **{}\n{} Manusia ini {} udah jadi Babu!!**"
 res_25: "{} **Dia bukan admin, Bego!!**"
@@ -441,7 +439,7 @@ st_6: "{} **Eh Tolol!! bales ke sticker punya lu!!**"
 st_7: "{} **Tololl apa gimana? Bales sticker ato media lah!!**"
 
 # Sudo
-sud_1: "{} **Makhluk ini {} udah sudo tot!!**"
+sud_1: "{} **Makhluk ini {} udah di sudo tot!!**"
 sud_2: "{} **Yosh, makhluk ini {} jadi piaraan!!**"
 sud_3: "{} **Makhluk ini {} bukan piaraan gw jing!!**"
 sud_4: "{} **Makhluk ini {} dilepas kehutan!!**"
@@ -464,8 +462,8 @@ prof_3: "{} **Setan ini {} diblokir!!**"
 prof_4: "{} Berhasil mengganti nama menjadi `{}`."
 prof_5: "{} Berhasil mengganti nama depan `{}` nama belakang `{}`."
 prof_6: "{} Berhasil mengganti bio menjadi : `{}`."
-prof_7: "{} **Loe receh bangsat!! Kaga admin dimana-mana!!**"
-prof_8: "{} **Nih tempat loe jadi babu `{}` grup :**\n\n**{}**"
+prof_7: "{} **Lo receh bangsat!! Kaga admin dimana-mana!!**"
+prof_8: "{} **Nih tempat lo jadi babu `{}` grup :**\n\n**{}**"
 prof_9: "{} **Foto Profil anda Berhasil Diubah.**"
 
 # waifu
